no logo area, cnr collaborator

--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -11,9 +11,6 @@ cards:
       - title: 'University of Trieste'
         site: 'https://portale.units.it/en'
         img: 'img/patrocini/logo_units.png'
-      - title: 'National Research Council'
-        site: 'https://www.cnr.it/en'
-        img: 'img/partners/logo-cnren.png'
       - title: 'Italian Physics Society'
         site: 'https://en.sif.it/'
         img: 'img/patrocini/sif_logo.png'
@@ -47,9 +44,12 @@ cards:
     size: 'small'
     zoom: false
     items:
-      - title: 'AREA Science Park'
-        site: 'https://www.areasciencepark.it/en/'
-        img: 'img/partners/AREA/OIP-840833661.jpg'
+      - title: 'National Research Council'
+        site: 'https://www.cnr.it/en'
+        img: 'img/partners/logo-cnren.png'
+      # - title: 'AREA Science Park'
+      #   site: 'https://www.areasciencepark.it/en/'
+      #   img: 'img/partners/AREA/OIP-840833661.jpg'
       - title: 'Elettra Sincrotrone Trieste'
         site: 'https://www.elettra.eu/'
         img: 'img/partners/elettra.png'
