aggiornamento loghi, aggiunto go, aggiunta data inizio iscrizioni

--- a/_config-dev.yml
+++ b/_config-dev.yml
@@ -2,8 +2,8 @@
 # title: "Acr Ev"
 # description: "nome evento completo"
 #url: "/" # the base hostname & protocol for your site
-title: "Gipe"
-description: "Gipe"
+title: "GIPE25"
+description: "GIPE25"
 url: "https://ai-sf.it/gipe"
 # url: "https://r3sten.github.io/gipe25"
 destination: ../site/
