Revert "aggiornamento loghi, aggiunto go, aggiunta data inizio iscrizioni"
This reverts commit a4b7f9ba4c6370b2fbbe82cfb0f0fd32e2766957.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: "GIPE25"
-description: "GIPE25"
+title: "Gipe"
+description: "Gipe"
 url: "https://ai-sf.it/gipe"
 # url: "https://r3sten.github.io/gipe25"
 destination: ../site/
