--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -7,13 +7,13 @@ cards:
     items:
       - title: 'Comune di Trieste'
         site: 'https://www.comune.trieste.it/'
-        img: 'img/patrocini/COMUNE_TRIESTE/LogoComuneTrieste.jpg'
+        img: 'img/patrocini/comune_di_trieste.png'
       - title: 'University of Trieste'
         site: 'https://portale.units.it/en'
-        img: 'img/patrocini/UNITS/logo_units.png'
+        img: 'img/patrocini/logo_units.png'
       - title: 'Italian Physics Society'
         site: 'https://en.sif.it/'
-        img: 'img/patrocini/SIF/sif_logo.png'
+        img: 'img/patrocini/sif_logo.png'
 
 
   - name: 'With the support of:'
@@ -22,22 +22,22 @@ cards:
     items:
       - title: 'International Association of Physics Students'
         site: 'https://www.iaps.info/'
-        img: 'img/partners/IAPS/IAPS_LOGO_new.png'
+        img: 'img/partners/IAPS_LOGO_new.png'
       - title: 'Physics Department of Trieste'
         site: 'https://df.units.it/en'
-        img: 'img/partners/DF/image002.png'
+        img: 'img/partners/image002.png'
       - title: 'International Centre for Theoretical Physics'
         site: 'https://www.ictp.it/'
-        img: 'img/partners/ICTP/ictp_logo.png'
+        img: 'img/partners/logo_ictp_corretto.png'
       - title: 'National Institute for Astrophysics'
         site: 'https://www.oats.inaf.it/index.php/en/'
-        img: 'img/partners/INAF/INAF-OATs_colori.png'
+        img: 'img/partners/logo_inaf_corretto.png'
       - title: 'National Institute for Nuclear Physics'
         site: 'https://www.ts.infn.it/en/'
-        img: 'img/partners/INFN/1_TRIESTE_LOGO_SIGLA.jpg'
+        img: 'img/partners/logo_infn_trieste.png'
       - title: 'International School for Advanced Studies'
         site: 'https://www.sissa.it/'
-        img: 'img/partners/SISSA/logo_sissa.jpg'
+        img: 'img/partners/sissa-logo.jpg'
 
 
   - name: 'In collaboration with:'
@@ -46,13 +46,13 @@ cards:
     items:
       - title: 'National Research Council'
         site: 'https://www.cnr.it/en'
-        img: 'img/partners/CNR/logo_CNR_compatto.jpg'
+        img: 'img/partners/logo-cnren.png'
       # - title: 'AREA Science Park'
       #   site: 'https://www.areasciencepark.it/en/'
       #   img: 'img/partners/AREA/OIP-840833661.jpg'
       - title: 'Elettra Sincrotrone Trieste'
         site: 'https://www.elettra.eu/'
-        img: 'img/partners/ELETTRA/elettra.png'
+        img: 'img/partners/elettra.png'
       # - title: 'PromoTurismoFVG'
       #   site: 'https://www.promoturismo.fvg.it/'
       #   img: 'img/partners/PromoTurismoFVG/tfvg-positivo-verticale.svg'
@@ -66,7 +66,7 @@ cards:
       #   img: 'img/partners/XFEL/European_XFEL_logo.svg.png'
       - title: 'National Interuniversity Consortium of Materials Science and Technology'
         site: 'https://www.instm.it/en/instm.aspx'
-        img: 'img/partners/INSTM/logo INSTM.png'
+        img: 'img/partners/logo_instm.png'
       - title: 'RENTAL SUD'
         site: 'https://www.rentalsudnoleggi.com/'
-        img: 'img/partners/RENTAL_SUD/VETTORIALE RENTALSUD_4.0_gv3.it_DEF1220.png'
+        img: 'img/partners/rental.png'
