aggiornato contenuto e grafica del programma

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,9 @@ locale: "it"
 
 # Build settings
 markdown: kramdown
+kramdown:
+  parse_block_html: true
+  parse_span_html: true
 future: true
 permalink: /blog/:year/:month/:day/:title/
 destination: _site
