--- a/_data/facilities.yml
+++ b/_data/facilities.yml
@@ -10,7 +10,7 @@ cards:
         map: https://maps.app.goo.gl/rtcd5ufs2pXyiAic7
 
       - img: img/facilities/fonda.jpg
-        title: Collegio Fonda
+        title: Collegio Universitario Luciano Fonda
         tag: 'fonda'
         descr: ''
         site: https://www.collegiofonda.it/
