--- a/_data/registration.yml
+++ b/_data/registration.yml
@@ -3,7 +3,7 @@ description:
   paragraphs:
     - paragraph:
         # - line: 'Registrations are yet to open. Stay tuned for updates!'
-        - line: 'Registrations will be open from July 21<sup>th</sup> at 15:00, GTM+1.'
+        - line: 'Registrations will be open from July 21<sup>st</sup> at 15:00, GTM+2.'
         # - line: 'Registrations are closed.'
         # - line: "Registrations are yet to open. Stay tuned for updates!"
     - paragraph:
@@ -58,7 +58,7 @@ sections:
   - name: 'Deadlines'
     info: ''
     points:
-      - text: 'The round of registration opens on July 21<sup>th</sup> at 15:00, GTM+1' #and closes on August 10<sup>th</sup> at 23:59, GTM+1.'
+      - text: 'The round of registration opens on July 21<sup>st</sup> at 15:00, GTM+2' #and closes on August 10<sup>th</sup> at 23:59, GTM+1.'
       # - text: 'Registrations are yet to open. Stay tuned for updates!'
       - text: 'Once the registration is closed, the organizing committee will select the participants follpwing the selection criteria presented above.'
       - text: 'Selected participants will be notified within a few days from the registration closing, then the event fee will have to be paid within 7 days to confirm the participation.'
