--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,5 +1,5 @@
 logo: 'img/logo_gipe_new_reduced.png'
-longname: 'German Italian Physics Exchange'
+longname: 'German Italian Physics Exchange 2025'
 
 who:
   text: '50 Physics students members of AISF (Associazione Italiana Studenti di Fisica) and jDPG (Young German Physical Society), among whom:'
