--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -13,7 +13,7 @@
 #   url: "transportation"
 - text: 'AISF'
   icon: 'public'
-  url: https://www.ai-sf.it
+  url: https://ai-sf.it/en/
 - text: 'jDPG'
   icon: 'public'
   url: https://www.dpg-physik.de/vereinigungen/fachuebergreifend/ak/akjdpg
