--- a/_data/meta.yml
+++ b/_data/meta.yml
@@ -1,4 +1,4 @@
 - id: '/'
   title: 'GIPE25'
   description: 'German Italian Physics Exchange 2025'
-  keywords: 'aisf associazione italiana studenti di fisica iaps gipe trieste jdpg german italian physics exchange'
+  keywords: 'aisf associazione italiana studenti di fisica iaps gipe trieste jdpg german italian physics exchange gipe25 gipe2025'
