--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -23,7 +23,7 @@ cards:
       - title: 'International Association of Physics Students'
         site: 'https://www.iaps.info/'
         img: 'img/partners/IAPS/iaps_new.png'
-      - title: 'Physics Department of Trieste'
+      - title: 'Physics Department of University of Trieste'
         site: 'https://df.units.it/en'
         img: 'img/partners/DF/image002.png'
       - title: 'International Centre for Theoretical Physics'
