--- a/_data/registration.yml
+++ b/_data/registration.yml
@@ -20,8 +20,8 @@ sections:
       - text: '50 places are available, 40 of them divided in equal parts between jDPG and AISF members. The remaining places are for local students. '
         #- text: "<b>Note</b>: Participation fee is subject to change and will be updated as soon as possible."
         subpoints:
-          - text: 'The selected candidates will have to cover a participation fee of 100€.'
-          - text: 'Students from University of Trieste have to pay a fee of 50€ (no accomodation included).'
+          - text: 'The selected candidates will have to cover a participation fee of 80€.'
+          - text: 'Students from University of Trieste have to pay a fee of 40€ (no accomodation included).'
         #  - text: "The final   fee might be reduced thanks to some sponsor, but can't be raised. We'll let you know the final price before the event starts."
       - text: 'Such fee will cover:'
         subpoints:
@@ -38,7 +38,7 @@ sections:
           - text: 'insurance;'
           - text: "everything else not included in: 'such fee will cover'."
       # - text: "(?) Preference will be given to students presenting abstracts for a talk. If you want to present a talk <a href='https://ai-sf.it/iscrizione/'>click here</a> for submit your abstract."
-      # - text: "(?) The selection criteria are presented here.<br> <a class='chip custom1 white-text' href='../files/selection_criteria.pdf' style='font-size: 14px; float: right;'> Selection Criteria </a>"
+      - text: "The selection criteria are presented here.<br> <a class='chip custom1 white-text' href='../files/Selection_Criteria_GIPE25.pdf' style='font-size: 14px; float: right;'> Selection Criteria </a>"
       - text: 'A short letter of motivation is also required and may be used to allocate places.'
       - text: 'Please note that unfortunately we are not able to provide scholarships and/or bursaries for any students at this time.'
 
