link schedule speakers fix

--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -35,7 +35,7 @@
   name: Dr. Pierluigi Masai
   photo: /img/speakers/masai/foto_Masai-683950461.jpg
   bio: PhD student at the University of Trieste.
-  # seminar_title: L'universo quantistico
+  seminar_title: "The Link Between Research and Innovation: A Lesson From the History of Physics"
   seminar_description:
     - "Dott. Pierluigi Masai will talk about his own educational journey and the
 testimonies of the people he has met, using them as a starting point to briefly
