aggiunta area e tolgo typo speakers

--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -47,9 +47,9 @@ cards:
       - title: 'National Research Council'
         site: 'https://www.cnr.it/en'
         img: 'img/partners/CNR/logo_CNR_compatto.jpg'
-      # - title: 'AREA Science Park'
-      #   site: 'https://www.areasciencepark.it/en/'
-      #   img: 'img/partners/AREA/OIP-840833661.jpg'
+      - title: 'AREA Science Park'
+        site: 'https://www.areasciencepark.it/en/'
+        img: 'img/partners/AREA/OIP-840833661.jpg'
       - title: 'Elettra Sincrotrone Trieste'
         site: 'https://www.elettra.eu/'
         img: 'img/partners/ELETTRA/elettra.png'
