--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -132,7 +132,7 @@ accommodation."
 
 - day: THURSDAY 18/09
   slots:
-    - time: "9:00-13:00"
+    - time: "9:00-12:00"
       title: "VISITING SISSA" # TODO: da finire
       place:
         name: "SISSA"
@@ -144,20 +144,22 @@ physicist Paolo Budinich."
         - '- Conference held by Dr. Pierluigi Masai: <em>"The Link Between Research and Innovation: A Lesson From the History of Physics"</em>;'
         - "- Presentation of SISSA's research branches;"
         - "- Coffee break;"
-        - '- “Discussion game” about open acces.'
+        - '- <em>"Discussion Game - How open is open access?"</em>'
+        - '<p style="margin: 0 1rem 0 1rem; font-size: 0.95rem">During this interactive session, participants will explore their opinions, engage in discussions, and make collective decisions on open access publishing.</p>'
+        - '<p style="margin: 0 1rem 0 1rem; font-size: 0.95rem">This game has been developed by SISSA Medialab, the SISSA in house company active in scholarly publishing and science communication.</p>'
       speakers:
         - name: "Pierluigi Masai"
           photo: "/img/speakers/masai/foto_Masai-683950461.jpg"
           description: "PhD student at the University of Trieste"
           id: "masai"
 
-    - time: "13:00-14:30"
+    - time: "12:00-13:30"
       title: "LUNCH AT SISSA"
       place:
         name: "SISSA"
         url: "/facilities/#sissa"
 
-    - time: "15:00-19:00"
+    - time: "14:00-19:00"
       title: "VISITING LABORATORIES"
       place:
         name: "Padriciano/Basovizza"
