discussion game title fix

--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -144,7 +144,7 @@ physicist Paolo Budinich."
         - '- Conference held by Dr. Pierluigi Masai: <em>"The Link Between Research and Innovation: A Lesson From the History of Physics"</em>;'
         - "- Presentation of SISSA's research branches;"
         - "- Coffee break;"
-        - '- <em>"Discussion Game - How open is open access?"</em>'
+        - '- Discussion Game - <em>"How open is open access?"</em>'
         - '<p style="margin: 0 1rem 0 1rem; font-size: 0.95rem">During this interactive session, participants will explore their opinions, engage in discussions, and make collective decisions on open access publishing.</p>'
         - '<p style="margin: 0 1rem 0 1rem; font-size: 0.95rem">This game has been developed by SISSA Medialab, the SISSA in house company active in scholarly publishing and science communication.</p>'
       speakers:
